ErrorList type
